Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2014-2015 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -84,6 +84,18 @@ void NetworkCache::setMaximumSize(size_t maximumSize)
     m_storage->setMaximumSize(maximumSize);
 }
 
+static NetworkCacheKey makeCacheKey(const WebCore::ResourceRequest& request)
+{
+#if ENABLE(CACHE_PARTITIONING)
+    String partition = request.cachePartition();
+#else
+    String partition;
+#endif
+    if (partition.isEmpty())
+        partition = ASCIILiteral("No partition");
+    return NetworkCacheKey(request.httpMethod(), partition, request.url().string());
+}
+
 static NetworkCacheStorage::Entry encodeStorageEntry(const WebCore::ResourceRequest& request, const WebCore::ResourceResponse& response, PassRefPtr<WebCore::SharedBuffer> responseData)
 {
     NetworkCacheEncoder encoder;
@@ -113,7 +125,7 @@ static NetworkCacheStorage::Entry encodeStorageEntry(const WebCore::ResourceRequ
     if (responseData)
         body = NetworkCacheStorage::Data(reinterpret_cast<const uint8_t*>(responseData->data()), responseData->size());
 
-    return NetworkCacheStorage::Entry { timeStamp, header, body };
+    return NetworkCacheStorage::Entry { makeCacheKey(request), timeStamp, header, body };
 }
 
 static bool verifyVaryingRequestHeaders(const Vector<std::pair<String, String>>& varyingRequestHeaders, const WebCore::ResourceRequest& request)
@@ -231,18 +243,6 @@ static NetworkCache::RetrieveDecision canRetrieve(const WebCore::ResourceRequest
     return NetworkCache::RetrieveDecision::Yes;
 }
 
-static NetworkCacheKey makeCacheKey(const WebCore::ResourceRequest& request)
-{
-#if ENABLE(CACHE_PARTITIONING)
-    String partition = request.cachePartition();
-#else
-    String partition;
-#endif
-    if (partition.isEmpty())
-        partition = ASCIILiteral("No partition");
-    return NetworkCacheKey(request.httpMethod(), partition, request.url().string());
-}
-
 void NetworkCache::retrieve(const WebCore::ResourceRequest& originalRequest, uint64_t webPageID, std::function<void (std::unique_ptr<Entry>)> completionHandler)
 {
     ASSERT(isEnabled());
@@ -272,6 +272,8 @@ void NetworkCache::retrieve(const WebCore::ResourceRequest& originalRequest, uin
             completionHandler(nullptr);
             return false;
         }
+        ASSERT(entry->key == storageKey);
+
         CachedEntryReuseFailure failure = CachedEntryReuseFailure::None;
         auto decodedEntry = decodeStorageEntry(*entry, originalRequest, failure);
         bool success = !!decodedEntry;
@@ -329,18 +331,19 @@ void NetworkCache::store(const WebCore::ResourceRequest& originalRequest, const 
 
     LOG(NetworkCache, "(NetworkProcess) storing %s, partition %s", originalRequest.url().string().latin1().data(), originalRequest.cachePartition().latin1().data());
 
-    auto key = makeCacheKey(originalRequest);
     StoreDecision storeDecision = canStore(originalRequest, response);
     if (storeDecision != StoreDecision::Yes) {
         LOG(NetworkCache, "(NetworkProcess) didn't store");
-        if (m_statistics)
+        if (m_statistics) {
+            auto key = makeCacheKey(originalRequest);
             m_statistics->recordNotCachingResponse(key, storeDecision);
+        }
         return;
     }
 
     auto storageEntry = encodeStorageEntry(originalRequest, response, WTF::move(responseData));
 
-    m_storage->store(key, storageEntry, [completionHandler](bool success, const NetworkCacheStorage::Data& bodyData) {
+    m_storage->store(storageEntry, [completionHandler](bool success, const NetworkCacheStorage::Data& bodyData) {
         MappedBody mappedBody;
 #if ENABLE(SHAREABLE_RESOURCE)
         if (bodyData.isMap()) {
@@ -362,10 +365,9 @@ void NetworkCache::update(const WebCore::ResourceRequest& originalRequest, const
     WebCore::ResourceResponse response = entry.response;
     WebCore::updateResponseHeadersAfterRevalidation(response, validatingResponse);
 
-    auto key = makeCacheKey(originalRequest);
     auto updateEntry = encodeStorageEntry(originalRequest, response, entry.buffer);
 
-    m_storage->update(key, updateEntry, entry.storageEntry, [](bool success, const NetworkCacheStorage::Data&) {
+    m_storage->update(updateEntry, entry.storageEntry, [](bool success, const NetworkCacheStorage::Data&) {
         LOG(NetworkCache, "(NetworkProcess) updated, success=%d", success);
     });
 }
@@ -374,7 +376,7 @@ void NetworkCache::traverse(std::function<void (const Entry*)>&& traverseHandler
 {
     ASSERT(isEnabled());
 
-    m_storage->traverse([traverseHandler](const NetworkCacheKey& key, const NetworkCacheStorage::Entry* entry) {
+    m_storage->traverse([traverseHandler](const NetworkCacheStorage::Entry* entry) {
         if (!entry) {
             traverseHandler(nullptr);
             return;
@@ -396,7 +398,7 @@ String NetworkCache::dumpFilePath() const
     return WebCore::pathByAppendingComponent(m_storage->baseDirectoryPath(), "dump.json");
 }
 
-static bool entryAsJSON(StringBuilder& json, const NetworkCacheKey& key, const NetworkCacheStorage::Entry& entry)
+static bool entryAsJSON(StringBuilder& json, const NetworkCacheStorage::Entry& entry)
 {
     NetworkCacheDecoder decoder(entry.header.data(), entry.header.size());
     WebCore::ResourceResponse cachedResponse;
@@ -404,10 +406,10 @@ static bool entryAsJSON(StringBuilder& json, const NetworkCacheKey& key, const N
         return false;
     json.append("{\n");
     json.append("\"hash\": ");
-    JSC::appendQuotedJSONStringToBuilder(json, key.hashAsString());
+    JSC::appendQuotedJSONStringToBuilder(json, entry.key.hashAsString());
     json.append(",\n");
     json.append("\"partition\": ");
-    JSC::appendQuotedJSONStringToBuilder(json, key.partition());
+    JSC::appendQuotedJSONStringToBuilder(json, entry.key.partition());
     json.append(",\n");
     json.append("\"timestamp\": ");
     json.appendNumber(entry.timeStamp.count());
@@ -439,7 +441,7 @@ void NetworkCache::dumpContentsToFile()
     if (!dumpFileHandle)
         return;
     WebCore::writeToFile(dumpFileHandle, "[\n", 2);
-    m_storage->traverse([dumpFileHandle](const NetworkCacheKey& key, const NetworkCacheStorage::Entry* entry) {
+    m_storage->traverse([dumpFileHandle](const NetworkCacheStorage::Entry* entry) {
         if (!entry) {
             WebCore::writeToFile(dumpFileHandle, "{}\n]\n", 5);
             auto handle = dumpFileHandle;
@@ -447,7 +449,7 @@ void NetworkCache::dumpContentsToFile()
             return;
         }
         StringBuilder json;
-        if (!entryAsJSON(json, key, *entry))
+        if (!entryAsJSON(json, *entry))
             return;
         json.append(",\n");
         auto writeData = json.toString().utf8();
