Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h
@@ -136,6 +136,7 @@ public:
     };
 
     struct Entry {
+        NetworkCacheKey key;
         std::chrono::milliseconds timeStamp;
         Data header;
         Data body;
@@ -145,11 +146,11 @@ public:
     void retrieve(const NetworkCacheKey&, unsigned priority, RetrieveCompletionHandler&&);
 
     typedef std::function<void (bool success, const Data& mappedBody)> StoreCompletionHandler;
-    void store(const NetworkCacheKey&, const Entry&, StoreCompletionHandler&&);
-    void update(const NetworkCacheKey&, const Entry& updateEntry, const Entry& existingEntry, StoreCompletionHandler&&);
+    void store(const Entry&, StoreCompletionHandler&&);
+    void update(const Entry& updateEntry, const Entry& existingEntry, StoreCompletionHandler&&);
 
     // Null entry signals end.
-    void traverse(std::function<void (const NetworkCacheKey&, const Entry*)>&&);
+    void traverse(std::function<void (const Entry*)>&&);
 
     void setMaximumSize(size_t);
     void clear();
@@ -176,7 +177,6 @@ private:
     void dispatchPendingReadOperations();
 
     struct WriteOperation {
-        NetworkCacheKey key;
         Entry entry;
         Optional<Entry> existingEntry;
         StoreCompletionHandler completionHandler;
