Source/WebKit2/NetworkProcess/cache/NetworkCacheStorageCocoa.mm
@@ -301,7 +301,8 @@ static std::unique_ptr<NetworkCacheStorage::Entry> decodeEntry(dispatch_data_t f
         return nullptr;
     }
 
-    return std::make_unique<NetworkCacheStorage::Entry>(NetworkCacheStorage::Entry {
+    return std::unique_ptr<NetworkCacheStorage::Entry>(new NetworkCacheStorage::Entry {
+        metaData.key,
         metaData.timeStamp,
         headerData,
         NetworkCacheStorage::Data { bodyData, NetworkCacheStorage::Data::Backing::Map }
@@ -325,9 +326,9 @@ static DispatchPtr<dispatch_data_t> encodeEntryMetaData(const EntryMetaData& ent
     return adoptDispatch(dispatch_data_create(encoder.buffer(), encoder.bufferSize(), nullptr, DISPATCH_DATA_DESTRUCTOR_DEFAULT));
 }
 
-static DispatchPtr<dispatch_data_t> encodeEntryHeader(const NetworkCacheKey& key, const NetworkCacheStorage::Entry& entry)
+static DispatchPtr<dispatch_data_t> encodeEntryHeader(const NetworkCacheStorage::Entry& entry)
 {
-    EntryMetaData metaData(key);
+    EntryMetaData metaData(entry.key);
     metaData.timeStamp = entry.timeStamp;
     metaData.headerChecksum = hashData(entry.header.dispatchData());
     metaData.headerSize = entry.header.size();
@@ -421,7 +422,7 @@ void NetworkCacheStorage::dispatchPendingReadOperations()
 template <class T> bool retrieveFromMemory(const T& operations, const NetworkCacheKey& key, NetworkCacheStorage::RetrieveCompletionHandler& completionHandler)
 {
     for (auto& operation : operations) {
-        if (operation->key == key) {
+        if (operation->entry.key == key) {
             LOG(NetworkCacheStorage, "(NetworkProcess) found write operation in progress");
             auto entry = operation->entry;
             dispatch_async(dispatch_get_main_queue(), [entry, completionHandler] {
@@ -437,6 +438,7 @@ void NetworkCacheStorage::retrieve(const NetworkCacheKey& key, unsigned priority
 {
     ASSERT(RunLoop::isMain());
     ASSERT(priority <= maximumRetrievePriority);
+    ASSERT(!key.isNull());
 
     if (!m_maximumSize) {
         completionHandler(nullptr);
@@ -453,44 +455,45 @@ void NetworkCacheStorage::retrieve(const NetworkCacheKey& key, unsigned priority
     if (retrieveFromMemory(m_activeWriteOperations, key, completionHandler))
         return;
 
-    m_pendingReadOperationsByPriority[priority].append(std::make_unique<ReadOperation>(ReadOperation { key, WTF::move(completionHandler) }));
+    m_pendingReadOperationsByPriority[priority].append(new ReadOperation { key, WTF::move(completionHandler) });
     dispatchPendingReadOperations();
 }
 
-void NetworkCacheStorage::store(const NetworkCacheKey& key, const Entry& entry, StoreCompletionHandler&& completionHandler)
+void NetworkCacheStorage::store(const Entry& entry, StoreCompletionHandler&& completionHandler)
 {
     ASSERT(RunLoop::isMain());
+    ASSERT(!entry.key.isNull());
 
     if (!m_maximumSize) {
         completionHandler(false, Data());
         return;
     }
 
-    auto writeOperation = std::make_unique<WriteOperation>(WriteOperation { key, entry, { }, WTF::move(completionHandler) });
-    m_pendingWriteOperations.append(WTF::move(writeOperation));
+    m_pendingWriteOperations.append(new WriteOperation { entry, { }, WTF::move(completionHandler) });
 
     // Add key to the filter already here as we do lookups from the pending operations too.
-    m_contentsFilter.add(key.shortHash());
+    m_contentsFilter.add(entry.key.shortHash());
 
     dispatchPendingWriteOperations();
 }
 
-void NetworkCacheStorage::update(const NetworkCacheKey& key, const Entry& updateEntry, const Entry& existingEntry, StoreCompletionHandler&& completionHandler)
+void NetworkCacheStorage::update(const Entry& updateEntry, const Entry& existingEntry, StoreCompletionHandler&& completionHandler)
 {
     ASSERT(RunLoop::isMain());
+    ASSERT(!existingEntry.key.isNull());
+    ASSERT(existingEntry.key == updateEntry.key);
 
     if (!m_maximumSize) {
         completionHandler(false, Data());
         return;
     }
 
-    auto writeOperation = std::make_unique<WriteOperation>(WriteOperation { key, updateEntry, existingEntry, WTF::move(completionHandler) });
-    m_pendingWriteOperations.append(WTF::move(writeOperation));
+    m_pendingWriteOperations.append(new WriteOperation { updateEntry, existingEntry, WTF::move(completionHandler) });
 
     dispatchPendingWriteOperations();
 }
 
-void NetworkCacheStorage::traverse(std::function<void (const NetworkCacheKey&, const Entry*)>&& traverseHandler)
+void NetworkCacheStorage::traverse(std::function<void (const Entry*)>&& traverseHandler)
 {
     StringCapture cachePathCapture(m_directoryPath);
     dispatch_async(m_ioQueue.get(), [this, cachePathCapture, traverseHandler] {
@@ -504,8 +507,8 @@ void NetworkCacheStorage::traverse(std::function<void (const NetworkCacheKey&, c
                 EntryMetaData metaData;
                 NetworkCacheStorage::Data headerData;
                 if (decodeEntryHeader(fileData, metaData, headerData)) {
-                    Entry entry { metaData.timeStamp, headerData, Data() };
-                    traverseHandler(metaData.key, &entry);
+                    Entry entry { metaData.key, metaData.timeStamp, headerData, Data() };
+                    traverseHandler(&entry);
                 }
                 if (done)
                     dispatch_semaphore_signal(semaphore.get());
@@ -513,7 +516,7 @@ void NetworkCacheStorage::traverse(std::function<void (const NetworkCacheKey&, c
             dispatch_semaphore_wait(semaphore.get(), DISPATCH_TIME_FOREVER);
         });
         dispatch_async(dispatch_get_main_queue(), [this, traverseHandler] {
-            traverseHandler({ }, nullptr);
+            traverseHandler(nullptr);
         });
     });
 }
@@ -533,7 +536,7 @@ void NetworkCacheStorage::dispatchPendingWriteOperations()
         auto& write = *writeOperation;
         m_activeWriteOperations.add(WTF::move(writeOperation));
 
-        if (write.existingEntry && m_contentsFilter.mayContain(write.key.shortHash())) {
+        if (write.existingEntry && m_contentsFilter.mayContain(write.entry.key.shortHash())) {
             dispatchHeaderWriteOperation(write);
             continue;
         }
@@ -546,24 +549,24 @@ void NetworkCacheStorage::dispatchFullWriteOperation(const WriteOperation& write
     ASSERT(RunLoop::isMain());
     ASSERT(m_activeWriteOperations.contains(&write));
 
-    if (!m_contentsFilter.mayContain(write.key.shortHash()))
-        m_contentsFilter.add(write.key.shortHash());
+    if (!m_contentsFilter.mayContain(write.entry.key.shortHash()))
+        m_contentsFilter.add(write.entry.key.shortHash());
 
     StringCapture cachePathCapture(m_directoryPath);
     dispatch_async(m_backgroundIOQueue.get(), [this, &write, cachePathCapture] {
-        auto encodedHeader = encodeEntryHeader(write.key, write.entry);
+        auto encodedHeader = encodeEntryHeader(write.entry);
         auto writeData = adoptDispatch(dispatch_data_create_concat(encodedHeader.get(), write.entry.body.dispatchData()));
 
         size_t bodyOffset = dispatch_data_get_size(encodedHeader.get());
 
         int fd;
-        auto channel = openFileForKey(write.key, FileOpenType::Create, cachePathCapture.string(), fd);
+        auto channel = openFileForKey(write.entry.key, FileOpenType::Create, cachePathCapture.string(), fd);
         dispatch_io_write(channel.get(), 0, writeData.get(), dispatch_get_main_queue(), [this, &write, fd, bodyOffset](bool done, dispatch_data_t, int error) {
             ASSERT_UNUSED(done, done);
             LOG(NetworkCacheStorage, "(NetworkProcess) write complete error=%d", error);
             if (error) {
-                if (m_contentsFilter.mayContain(write.key.shortHash()))
-                    m_contentsFilter.remove(write.key.shortHash());
+                if (m_contentsFilter.mayContain(write.entry.key.shortHash()))
+                    m_contentsFilter.remove(write.entry.key.shortHash());
             }
             size_t bodySize = write.entry.body.size();
             size_t totalSize = bodyOffset + bodySize;
@@ -590,13 +593,13 @@ void NetworkCacheStorage::dispatchHeaderWriteOperation(const WriteOperation& wri
     ASSERT(RunLoop::isMain());
     ASSERT(write.existingEntry);
     ASSERT(m_activeWriteOperations.contains(&write));
-    ASSERT(m_contentsFilter.mayContain(write.key.shortHash()));
+    ASSERT(m_contentsFilter.mayContain(write.entry.key.shortHash()));
 
     // Try to update the header of an existing entry.
     StringCapture cachePathCapture(m_directoryPath);
     dispatch_async(m_backgroundIOQueue.get(), [this, &write, cachePathCapture] {
-        auto headerData = encodeEntryHeader(write.key, write.entry);
-        auto existingHeaderData = encodeEntryHeader(write.key, write.existingEntry.value());
+        auto headerData = encodeEntryHeader(write.entry);
+        auto existingHeaderData = encodeEntryHeader(write.existingEntry.value());
 
         bool pageRoundedHeaderSizeChanged = dispatch_data_get_size(headerData.get()) != dispatch_data_get_size(existingHeaderData.get());
         if (pageRoundedHeaderSizeChanged) {
@@ -608,13 +611,13 @@ void NetworkCacheStorage::dispatchHeaderWriteOperation(const WriteOperation& wri
         }
 
         int fd;
-        auto channel = openFileForKey(write.key, FileOpenType::Write, cachePathCapture.string(), fd);
+        auto channel = openFileForKey(write.entry.key, FileOpenType::Write, cachePathCapture.string(), fd);
         dispatch_io_write(channel.get(), 0, headerData.get(), dispatch_get_main_queue(), [this, &write](bool done, dispatch_data_t, int error) {
             ASSERT_UNUSED(done, done);
             LOG(NetworkCacheStorage, "(NetworkProcess) update complete error=%d", error);
 
             if (error)
-                removeEntry(write.key);
+                removeEntry(write.entry.key);
 
             write.completionHandler(!error, Data());
 
